@@ -3,6 +3,7 @@ Changes in 5.2.rc2
 * FIX terminal initialization must be done before executing ~/.gnuplot
 * FIX do not use LaTeX formatting in tabular output
 * FIX polar border should not be clipped to rectangular border
+* FIX raxis was truncated at R=0 if the axis direction was inverted
 * FIX sanity check to catch "plot '+' binary"
 * FIX sanity check for NULL format passed to gprintf
 * FIX sanity check inverse mapping function of set link and set nonlinear
