@@ -5,12 +5,12 @@ This is a pre-release testing copy of gnuplot version 5.2.
 Please see the ChangeLog file for a complete list of changes made during the
 course of development from 5.0 to 5.2.
 
-Release Notes date: 19-Jun-2017
+Release Notes date: 02-Jul-2017
 
 CHANGES SINCE rc1
 =================
 * FIX: terminal initialization must complete before executing ~/.gnuplot
-* FIX: polar border should not be clipped to rectangular border
+* FIX: incorrect clipping of polar border and raxis
 * FIX: add sanity checks to detect and handle various types of bad input data
        or command syntax found by fuzz-testing
 
